--- a/templates/create_order.html
+++ b/templates/create_order.html
@@ -165,8 +165,7 @@
         </div>
     
         <form class="order-form" method="POST">
-            <label for="order_date">Order Date:</label>
-            <input type="date" id="order_date" name="order_date" required><br><br>
+            <p><strong>Order Date:</strong> Automatic</p>
         
             <!-- Customer Select -->
             <label for="customer_name">Customer Name:</label>
