--- a/templates/stocks.html
+++ b/templates/stocks.html
@@ -168,8 +168,8 @@
 
             <div class="form-group">
                 <label for="product_serial_no">Product Serial No</label>
-                <input type="text" id="product_serial_no" name="product_serial_no" required>
-            </div>
+                <input type="text" id="product_serial_no" name="product_serial_no">
+            </div>            
 
             <div class="form-group">
                 <label for="stock_data">Stock Data</label>
@@ -191,11 +191,6 @@
                     {% endfor %}
                 </select>
             </div>            
-
-            <div class="form-group">
-                <label for="entered_date">Date Entered</label>
-                <input type="date" id="entered_date" name="entered_date" required>
-            </div>
 
             <div class="form-group">
                 <label for="expiry_date">Expiry Date</label>
