--- a/templates/edit_prices.html
+++ b/templates/edit_prices.html
@@ -161,6 +161,8 @@
                         </td>
                     </form>
                 </tr>
+                {% else %}
+                <td colspan="7" style="text-align:center;">No Stocks to edit found.</td>
                 {% endfor %}
             </tbody>
         </table>
