--- a/templates/count_product_quantity.html
+++ b/templates/count_product_quantity.html
@@ -90,7 +90,7 @@
 
                     // Check if there are products returned
                     if (response.length === 0) {
-                        $('#productTable tbody').append('<tr><td colspan="2" class="text-center">No products found.</td></tr>');
+                        $('#productTable tbody').append('<tr><td colspan="3" style="text-align:center;">No products found.</td></tr>');
                     } else {
                         // Populate the table with product data
                         response.forEach(function(product) {
