--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -222,13 +222,22 @@
             </a>
         </section>
 
-        <section style="margin-top: 50px;"> 
+        <section style="margin-top: 50px;">
             <h2>Stock Drain Over Last 7 Days</h2>
             <canvas id="quantityChart" width="100%" height="40"></canvas>
             <div style="text-align: right; margin-top: 10px;">
-                <button onclick="resetChart()">Reset</button>
+                <div style="display: flex; justify-content: space-between; margin-top: 10px;">
+                    <div>
+                        <button onclick="shiftTimeWindow(-1)">&lt; Prev 24hrs</button>
+                        <button id="nextButton" onclick="shiftTimeWindow(1)">Next 24hrs &gt;</button>
+                    </div>
+                    <div>
+                        <button onclick="resetChart()">Reset</button>
+                    </div>
+                </div>
             </div>
         </section>
+        
         
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <script src="{{ url_for('static', filename='js/charts.js') }}"></script>
